<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Harvey</string>
    <string name="last_name">Zhao</string>
    <string name="full_name">Harvey Zhao</string>

    <string name="profile_bio_text">Hi! I am Harvey, a senior at UCLA studying computer science. I am happy to share some good memories with y\'all for the next 10 weeks!</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Hiking and trail running</string>
    <string name="profile_hobby_second_text">🥈 Traveling</string>
    <string name="profile_hobby_third_text">🥉 Learning New Languages</string>
</resources>